--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tstr",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mNm-5.github.io/test/",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
